tests/script_runtime_errors/merge_new_no_object/error.txt
Error: 
    1 | merge {} of 7 end
      |             ^ Conflicting types, got integer but expected record